--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TallerUnimagUno">
-        <activity android:name=".GeometriaActivity"></activity>
+        <activity android:name=".UpdatePasswordActivity"></activity>
+        <activity android:name=".ForgotPasswordActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".GeometriaActivity" />
         <activity android:name=".MatematicasActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".LoginActivity">
